--- a/Dockerfile-master
+++ b/Dockerfile-master
@@ -1,5 +1,8 @@
 FROM python:3.6
 
+RUN echo "nameserver 8.8.8.8" >> /etc/resolv.conf
+RUN echo "nameserver 8.8.4.4" >> /etc/resolv.conf
+
 # set the working directory in the container
 WORKDIR /code
 
@@ -7,11 +10,11 @@ WORKDIR /code
 COPY requirements.txt .
 
 # install dependencies
-RUN pip install -r requirements.txt
+RUN pip install --default-timeout=1000 -r requirements.txt
 
 # copy the content of the local files to the working directory
 COPY config.py .
-COPY kafka-topic-creator.py .
+COPY kafka_topic_creator.py .
 COPY persister.py .
 COPY master.py .
 
