--- a/Dockerfile-worker
+++ b/Dockerfile-worker
@@ -1,5 +1,8 @@
 FROM python:3.6
 
+RUN echo "nameserver 8.8.8.8" >> /etc/resolv.conf
+RUN echo "nameserver 8.8.4.4" >> /etc/resolv.conf
+
 # set the working directory in the container
 WORKDIR /code
 
@@ -7,7 +10,7 @@ WORKDIR /code
 COPY requirements.txt .
 
 # install dependencies
-RUN pip install -r requirements.txt
+RUN pip install --default-timeout=1000 -r requirements.txt
 
 # copy the content of the local files to the working directory
 COPY worker.py .
