--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,8 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile-master
+    dns:
+      - 8.8.8.8
     depends_on:
       - kafka-cluster
       - neo4j
@@ -49,6 +51,8 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile-worker
+    dns:
+      - 8.8.8.8
     depends_on:
       - kafka-cluster
       - neo4j
